[project]
name = "gtnh-flow"
version = "2.0.0"
description = ""
authors = [
    {name = "joegnis", email = "joegnis@pm.me"},
]
dependencies = [
    "graphviz>=0.20.3",
    "pyyaml>=6.0.1",
    "pyreadline3>=3.4.1",
    "sympy>=1.12",
    "termcolor>=2.4.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.1.1",
]
